hphp/test/slow/array/ban.php.expectf
Fatal error: Array literals are no longer legal; use varray or darray instead in %s/ban.php on line 5
